Endrer på endepunktene for innvilgelse, avslag & forkast
