# docs/openapi.yaml
@@ -133,7 +133,7 @@ paths:
           description: >
             - Oppdatert vedtak etter at aksjonspunkt er løst, som gjenspeiles at det/de som ble løst nå er borte fra `uløsteAksjonspunkter`</br>
 
-            - Om `potensielleStatuser` ikke inneholder `INNVILGET` betyr det at vedtaket ikke kan innvilges ettersom en av løsningene på aksjonspuntene indikerer at det må bli `AVASLÅTT` eller `FORKASTET`
+            - Om `potensielleStatuser` ikke inneholder `INNVILGET` betyr det at vedtaket ikke kan innvilges ettersom en av løsningene på aksjonspuntene indikerer at det må bli `AVSLÅTT` eller `FORKASTET`
           content:
             application/json:
               schema:
@@ -142,7 +142,7 @@ paths:
           description: >
             - Om vedtaket har en annen status enn `FORESLÅTT`<br/>
 
-  /kronisk-sykt-barn/{behandlingId}/innvilgelse:
+  /kronisk-sykt-barn/{behandlingId}/innvilget:
     patch:
       tags:
         - Kronisk sykt barn - skriv
@@ -169,7 +169,7 @@ paths:
             - Om vedtaket før innvilgelse har en annen status enn `FORESLÅTT`<br/>
 
             - Om løsningene på et eller fler aksjonspunkt indikerer at vedtaket ikke kan innvilges
-  /kronisk-sykt-barn/{behandlingId}/avslag:
+  /kronisk-sykt-barn/{behandlingId}/avslått:
     patch:
       tags:
         - Kronisk sykt barn - skriv
@@ -192,7 +192,7 @@ paths:
         409:
           description: >
             - Om vedtaket før avslag har en annen status enn `FORESLÅTT`
-  /kronisk-sykt-barn/{behandlingId}/forkast:
+  /kronisk-sykt-barn/{behandlingId}/forkastet:
     patch:
       tags:
         - Kronisk sykt barn - skriv
